form validation added, fixed content overflowed in buy ticket window

--- a/Components/NewsWindow/newsWindow.module.scss
+++ b/Components/NewsWindow/newsWindow.module.scss
@@ -5,6 +5,7 @@
 .project {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 323px;
 
   @include mobile {
     grid-template-columns: 1fr;
